--- a/app/src/main/res/layout/article_moderation_share_activity.xml
+++ b/app/src/main/res/layout/article_moderation_share_activity.xml
@@ -7,12 +7,21 @@
   android:layout_marginTop="@dimen/space_22"
   android:orientation="vertical">
 
+  <androidx.appcompat.widget.AppCompatImageView
+    android:id="@+id/back"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:srcCompat="@drawable/ic_cancel"
+    android:layout_alignParentEnd="true"
+    android:padding="@dimen/space_16"/>
+
   <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/youAreDoneView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
-    android:layout_marginBottom="@dimen/space_12">
+    android:layout_marginBottom="@dimen/space_12"
+    android:layout_marginTop="@dimen/space_25">
 
     <com.mycity4kids.widget.CustomFontTextView
       android:id="@+id/secondTextView"
@@ -79,7 +88,6 @@
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="10dp"
-    android:gravity="center"
     android:orientation="vertical"
     android:visibility="gone">
 
@@ -117,6 +125,7 @@
       android:layout_marginTop="18dp"
       android:gravity="center"
       android:paddingLeft="60dp"
+      android:layout_gravity="center_horizontal"
       android:paddingTop="14dp"
       android:paddingRight="60dp"
       android:paddingBottom="14dp"
