--- a/app/src/main/res/layout/short_story_moderation_share_activity.xml
+++ b/app/src/main/res/layout/short_story_moderation_share_activity.xml
@@ -12,9 +12,21 @@
     android:background="?attr/colorPrimary"
     android:elevation="8dp"
     android:minHeight="?attr/actionBarSize"
+    app:contentInsetStart="0dp"
     app:layout_constraintTop_toTopOf="parent"
     app:theme="@style/ToolbarTheme"
-    app:titleTextAppearance="@style/ToolbarTheme.Title" />
+    app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+    <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/back"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="@dimen/space_16"
+      android:visibility="gone"
+      app:srcCompat="@drawable/ic_cancel" />
+
+
+  </androidx.appcompat.widget.Toolbar>
 
   <RelativeLayout
     android:id="@+id/moderationContainer"
