--- a/app/src/main/res/layout/choose_short_story_category_activity.xml
+++ b/app/src/main/res/layout/choose_short_story_category_activity.xml
@@ -332,7 +332,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
-          android:text="Let us help you create your first 100 word story! Select a challenge or a category to start with"
+          android:text="@string/coachmark_story_1"
           android:textColor="@color/campaign_515151"
           android:textSize="16sp"
           app:fontName="Roboto-Medium.ttf"
@@ -344,7 +344,7 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:padding="15dp"
-          android:text="Skip the tour"
+          android:text="@string/skip_the_tour"
           android:textColor="#979797"
           android:textSize="14sp"
           app:fontName="Roboto-Regular.ttf"
@@ -357,7 +357,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="15dp"
-          android:text="Ok, Got it"
+          android:text="@string/ok_got_it"
           android:textColor="@color/app_red"
           android:textSize="16sp"
           app:fontName="Roboto-Medium.ttf"
