--- a/app/src/main/res/layout/activity_new_editor.xml
+++ b/app/src/main/res/layout/activity_new_editor.xml
@@ -236,7 +236,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingStart="@dimen/space_10"
-          android:text="Ok, Got it"
+          android:text="@string/ok_got_it"
           android:textColor="@color/app_red"
           android:textSize="16sp"
           app:fontName="Roboto-Medium.ttf"
