--- a/app/src/main/res/layout/add_video_detail_tooltip.xml
+++ b/app/src/main/res/layout/add_video_detail_tooltip.xml
@@ -13,7 +13,7 @@
     android:id="@+id/secondTextView"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:text="Use an interesting title to grab the viewer's attention"
+    android:text="@string/choose_interesting_title"
     android:textColor="@color/campaign_515151"
     android:textSize="14sp"
     app:fontName="Roboto-Regular.ttf"
@@ -26,7 +26,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:text="Next"
+    android:text="@string/coachmark_next"
     android:textColor="@color/app_red"
     android:textSize="16sp"
     android:visibility="visible"
