--- a/app/src/main/res/layout/short_story_choose_background_tooltip_layout.xml
+++ b/app/src/main/res/layout/short_story_choose_background_tooltip_layout.xml
@@ -13,7 +13,7 @@
     android:id="@+id/secondTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Choose a background of your choice"
+    android:text="@string/coachmark_story_2"
     android:textColor="@color/campaign_515151"
     android:textSize="14sp"
     app:fontName="Roboto-Regular.ttf"
@@ -26,7 +26,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:text="Next"
+    android:text="@string/coachmark_next"
     android:visibility="gone"
     android:textColor="@color/app_red"
     android:textSize="16sp"
