--- a/app/src/main/res/layout/story_publish_tooltip_layout.xml
+++ b/app/src/main/res/layout/story_publish_tooltip_layout.xml
@@ -14,7 +14,7 @@
     android:id="@+id/secondTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Once done, publish your first 100 word story!"
+    android:text="@string/coachmark_story_3"
     android:textColor="@color/campaign_515151"
     android:textSize="14sp"
     app:fontName="Roboto-Regular.ttf"
@@ -28,7 +28,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginTop="@dimen/space_5"
-    android:text="Ok, Got it"
+    android:text="@string/ok_got_it"
     android:textColor="@color/app_red"
     android:textSize="16sp"
     app:fontName="Roboto-Medium.ttf"
