--- a/app/src/main/res/layout/thumbnail_video_tooltip.xml
+++ b/app/src/main/res/layout/thumbnail_video_tooltip.xml
@@ -26,7 +26,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:text="Next"
+    android:text="@string/coachmark_next"
     android:textColor="@color/app_red"
     android:textSize="16sp"
     android:visibility="gone"
