Blogger gold and coachmark-tooltip integration

--- a/app/src/main/res/layout/article_challenges_activity.xml
+++ b/app/src/main/res/layout/article_challenges_activity.xml
@@ -333,7 +333,10 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
-      android:layout_margin="16dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="16dp"
+      android:layout_marginBottom="80dp"
       app:cardCornerRadius="4dp">
       <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -344,8 +347,8 @@
           android:id="@+id/headerText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:padding="10dp"
           android:gravity="center_vertical"
+          android:padding="10dp"
           android:text="@string/coachmark_article_1"
           android:textColor="@color/campaign_515151"
           android:textSize="16sp"
@@ -358,7 +361,7 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:padding="10dp"
-          android:text="Skip the tour"
+          android:text="@string/skip_the_tour"
           android:textColor="@color/campaign_515151"
           android:textSize="14sp"
           app:fontName="Roboto-Regular.ttf"
