--- a/app/src/main/res/layout/video_category_challenge_selection_activity.xml
+++ b/app/src/main/res/layout/video_category_challenge_selection_activity.xml
@@ -356,7 +356,7 @@ or a challenge to start with"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:text="Skip the tour"
+        android:text="@string/skip_the_tour"
         android:textColor="#979797"
         android:textSize="14sp"
         app:fontName="Roboto-Regular.ttf"
