--- a/app/src/main/res/layout/video_category_challenge_selection_activity.xml
+++ b/app/src/main/res/layout/video_category_challenge_selection_activity.xml
@@ -343,8 +343,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Let us help you create your first vlog! Select a category
-or a challenge to start with"
+        android:text="@string/coachmark_vlogs_1"
         android:textColor="@color/campaign_515151"
         android:textSize="16sp"
         app:fontName="Roboto-Medium.ttf"
@@ -369,7 +368,7 @@ or a challenge to start with"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:text="Ok, Got it"
+        android:text="@string/ok_got_it"
         android:textColor="@color/app_red"
         android:textSize="16sp"
         app:fontName="Roboto-Medium.ttf"
