--- a/app/src/main/res/layout/article_challenges_activity.xml
+++ b/app/src/main/res/layout/article_challenges_activity.xml
@@ -199,12 +199,12 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
-          android:drawableLeft="@drawable/back_arroow"
+          android:drawableStart="@drawable/back_arroow"
           android:drawablePadding="@dimen/space_10"
-          android:drawableTint="@color/user_articles.toolbar.title"
           android:text="@string/home_screen.suggested_topic.title"
           android:textColor="@color/user_articles.toolbar.title"
           android:textSize="20sp"
+          app:drawableTint="@color/user_articles.toolbar.title"
           app:fontName="oswald_regular.ttf" />
 
         <ImageView
@@ -212,13 +212,10 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
-          android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:paddingStart="5dp"
-          android:paddingLeft="5dp"
           android:paddingTop="5dp"
           android:paddingEnd="10dp"
-          android:paddingRight="10dp"
           android:paddingBottom="5dp"
           android:src="@drawable/ic_search"
           android:visibility="gone" />
